--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -10,7 +10,40 @@
     <title>JSF_Lembretes</title>
 </h:head>
 <h:body>
-    <h1>JSF_Lembretes</h1>
-    <h:outputText value="Ola mundo!" />
+    <h1>JSF_Lembretes:</h1>
+
+    <h:link value="Novo Lembrete" outcome="adicionar" />
+
+    <h:dataTable value="#{lembreteBean.lembretes}" var="lembrete">
+        <h:column>
+            <f:facet name="header">#</f:facet>
+            #{lembrete.id}
+        </h:column>
+        <h:column>
+            <f:facet name="header">Título</f:facet>
+            #{lembrete.titulo}
+        </h:column>
+        <h:column>
+            <f:facet name="header">Descrição</f:facet>
+            #{lembrete.descricao}
+        </h:column>
+        <h:column>
+            <f:facet name="header">Início</f:facet>
+            <h:outputText value="#{lembrete.dataInicio.time}">
+                <f:convertDateTime pattern="dd/MM/yyyy"/>
+            </h:outputText>
+        </h:column>
+        <h:column>
+            <h:link value="Editar" outcome="editar">
+                <f:param name="lembrete" value="#{lembrete.id}"/>
+            </h:link>
+        </h:column>
+        <h:column>
+            <h:link value="Remover" outcome="remover">
+                <f:param name="lembrete" value="#{lembrete.id}"/>
+            </h:link>
+        </h:column>
+    </h:dataTable>
+
 </h:body>
 </html>
