Refactory - Adicionar lembrete
Refactory - Adicionar lembrete corrigindo o link na barra, mensagem de sucesso na tela e instancia da classe lembrete no método de adicionar

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -11,6 +11,8 @@
 </h:head>
 <h:body>
     <h1>JSF_Lembretes:</h1>
+    <!--Componente que vai exibir mensagem de sucesso!!! -->
+    <h:messages/>
 
     <h:link value="Novo Lembrete" outcome="adicionar" />
 
