Configuração das rotas
Configuração das rotas no faces-config, redirect em cada rota e refactory das paginas que estavam com link errado de voltar

--- a/src/main/webapp/editar.xhtml
+++ b/src/main/webapp/editar.xhtml
@@ -43,6 +43,6 @@
         <h:commandButton value="Enviar" action="#{lembreteBean.editar}"/>
     </h:form>
 
-    <h:link value="Voltar" outcome="index"/>
+    <h:link value="Voltar" outcome="home"/>
 </h:body>
 </html>
