--- a/src/main/webapp/remover.xhtml
+++ b/src/main/webapp/remover.xhtml
@@ -24,6 +24,6 @@
         <h:commandButton value="Confirmar" action="#{lembreteBean.remover}"/>
     </h:form>
     <br/>
-    <h:link value="Voltar" outcome="index"/>
+    <h:link value="Voltar" outcome="home"/>
 </h:body>
 </html>
