Finalização com MAPPER
Persistindo os dados em memória

--- a/src/main/webapp/adicionar.xhtml
+++ b/src/main/webapp/adicionar.xhtml
@@ -8,9 +8,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
     <title>Adicionar Lembrete</title>
+    <!--Limpando a seção antes de abrir -->
+    <f:metadata>
+        <f:event type="preRenderView" listener="#{lembreteBean.init}"/>
+    </f:metadata>
+    
 </h:head>
 <h:body>
-    <h1><h:outputLabel>Adicionar</h:outputLabel></h1>
+    <h3>Adicionar Lembrete</h3>
 
     <h:form>
         <h:panelGrid columns="3">
